# CellScience

./: .gitignore  CMakeLists.txt  README.md
src/: CellObject.cpp  CellObject.hpp  CellPlot.cpp  CellPlot.hpp  ChanVese3D.cpp  ChanVese3D.hpp  Debug.cpp  Debug.hpp  Ellipsoid.cpp  Ellipsoid.hpp  EllipsoidLeastSquareFit.cpp  EllipsoidMinimizer.cpp  EllipsoidMinimizer.hpp  FastMarching.hpp  GaussSmooth.cpp  GaussSmooth.hpp  MainWindow.cpp  MainWindow.h  Minimizer.cpp  Minimizer.hpp  MinimizerN.cpp  MouseoverScrollArea.cpp  MouseoverScrollArea.hpp  NumericToolControl.cpp  NumericToolControl.hpp  PyPlot.cpp  PyPlot.hpp  RandomVesicleImageGenerator.cpp  RandomVesicleImageGenerator.hpp  SignedDistanceMap.hpp  SignedDistanceMapResult.cpp  SignedDistanceMapResult.hpp  TiffReader.cpp  TiffReader.hpp  UtilityFunctions.hpp  VesicleSegmentationResult.cpp  VesicleSegmentationResult.hpp  VesicleSegmentationResultManager.cpp  VesicleSegmentationResultManager.hpp  VesicleSegmentationWindow.cpp  (+6 more)
